[package]
name = "seminar_multi_threading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "create_thread"
path = "src/examples/1_create_thread.rs"

[[bin]]
name = "create_thread_valid"
path = "src/cheatsheet/1_create_thread.rs"

[[bin]]
name = "share_memory"
path = "src/examples/2_share_memory.rs"

[[bin]]
name = "share_memory_valid"
path = "src/cheatsheet/2_share_memory.rs"

[[bin]]
name = "atomic"
path = "src/examples/3_atomic_operations.rs"

[[bin]]
name = "atomic_valid"
path = "src/cheatsheet/3_atomic_operations.rs"

[[bin]]
name = "channel"
path = "src/examples/4_channel.rs"

[[bin]]
name = "channel_valid"
path = "src/cheatsheet/4_channel.rs"
